<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <EditText
        android:id="@+id/pinCodeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pinText"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/searchButton"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enterYourPinTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center"
        android:text="@string/please_enter_your_pin_code_to_check_vaccine_availability_to_your_area"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pinCodeEditText"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/delivery"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:lottie_rawRes="@raw/delivery"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:visibility="gone"
        android:layout_margin="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pinCodeEditText"/>

    <TextView
        android:id="@+id/vaccineNotFoundTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oooops_n_there_is_no_vaccines_available_in_your_area"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:gravity="center"
        android:visibility="gone"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/delivery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/vaccineRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        app:layout_constraintTop_toBottomOf="@id/pinCodeEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/vaccine"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:lottie_rawRes="@raw/vaccine"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:visibility="gone"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@id/pinCodeEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/covidCasesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="30dp"
        android:src="@drawable/corona"
        app:maxImageSize="20dp"
        app:rippleColor="@color/red"
        android:background="@color/white"
        app:backgroundTint="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>