<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.WelcomeActivity">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_checkvac"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/noteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeTextView"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/sanitize"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:lottie_rawRes="@raw/sanitize"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/noteTextView"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/mask"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:lottie_rawRes="@raw/wear_mask"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/noteTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/distancing"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:lottie_rawRes="@raw/social_distancing"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/mask"
        app:layout_constraintStart_toStartOf="@id/sanitize"
        app:layout_constraintEnd_toEndOf="@id/mask"/>

    <Button
        android:id="@+id/okayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/distancing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        android:text="@string/okay"/>

</androidx.constraintlayout.widget.ConstraintLayout>